--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -123,9 +123,8 @@ hr {
 }
 
 .pagination {
-  width: 241px;
-  margin-left: auto;
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
   margin-bottom: 3em;
   a, .previous_page, .current, .next_page {
     padding: .75em 1em;
