--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -48,9 +48,9 @@
      color: #e0528d;
     }
     .link:hover {
-     opacity: 0.5;  //transparent by 50% when someone hovers over link
+     opacity: 0.5;  
     }
-    @media (max-width: 600px) {  //style when screen is smaller
+    @media (max-width: 600px) {
      .image {
          width: 100%;
      }
