--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -22,24 +22,25 @@
     });
   </script>
   <body>
-    <div class="sidebar_menu hide_menu">
-      <i class="fa fa-times"></i>
-      <h1><%= link_to "The Teen Magazine", root_path %></h1>
-      <a href="/categories/beauty">Beauty</a>
-      <a href="/categories/fashion">Fashion</a>
-      <a href="/categories/entertainment">Entertainment</a>
-      <%= link_to "All Articles", posts_path %>
-      <%= link_to "Contact", new_contact_path %>
-      <% if current_user && current_user.admin? %>
-        <%= link_to "Users", users_path %>
-      <% end %>
-      <% if user_signed_in? %>
-         <%= link_to "Dashboard", user_path(current_user) %>
-         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-     <% else %>
-         <%= link_to "Apply", new_apply_path %>
-      <% end %>
-    </div>
+    <div class="category">
+      <div class="sidebar_menu hide_menu">
+        <i class="fa fa-times"></i>
+        <h1><%= link_to "The Teen Magazine", root_path %></h1>
+        <a href="/categories/beauty">Beauty</a>
+        <a href="/categories/fashion">Fashion</a>
+        <a href="/categories/entertainment">Entertainment</a>
+        <%= link_to "All Articles", posts_path %>
+        <%= link_to "Contact", new_contact_path %>
+        <% if current_user && current_user.admin? %>
+          <%= link_to "Users", users_path %>
+        <% end %>
+        <% if user_signed_in? %>
+           <%= link_to "Dashboard", user_path(current_user) %>
+           <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+       <% else %>
+           <%= link_to "Apply", new_apply_path %>
+        <% end %>
+      </div>
     <div class="overflow">
       <div class="bodywrapper">
       <header id="main_navigation" class="clearfix">
@@ -47,24 +48,19 @@
           <div class="logo--flex">
             <i class="fa fa-bars toggle_menu"></i>
             <h1 id="main_title" class="name"><%= link_to "The Teen Magazine", root_path %></h1>
-            <!-- <%=link_to(image_tag("http://i1074.photobucket.com/albums/w412/mjohansson9/imageedit_1_5659273426_zpswrtm8qvc.png", :class => "name"), root_path )%> -->
           </div>
           <nav>
+            <%= link_to "The Teen Magazine", root_path, class: "nav-title" %>
             <a href="/categories/beauty">Beauty</a>
             <a href="/categories/fashion">Fashion</a>
             <a href="/categories/entertainment">Entertainment</a>
             <%= link_to "Articles", posts_path %>
-            <% if current_user && current_user.admin? %>
-              <%= link_to "Users", users_path %>
-            <% end %>
             <% if user_signed_in? %>
-               <%= link_to "Dashboard", user_path(current_user) %>
-               <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
             <% else %>
                <%= link_to "Apply", new_apply_path %>
             <% end %>
-            <a href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
-            <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+            <a class="social" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
+            <a class="social" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
           </nav>
         </div>
       </header>
@@ -86,6 +82,8 @@
         <a href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
       </nav>
     </footer>
+
+  </div>
 
     <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
