--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,8 +20,13 @@
 <br><%= f.label :image, "Image URL" %><br>
 <%= f.text_field :image %>
 
-<br><%= f.label :category %><br>
-<%= f.text_field :category %>
+<br><%= f.label "Category" %>
+<%= f.select :meta_title, ['Beauty', 'Fashion', 'Health & Fitness', 'Lifestyle', 'Trends', 'Entertainment', 'Academics', 'Tips & Hacks', 'DIY', 'Travel', 'Love & Relationships'] %>
+
+<% if (current_user && current_user.admin?) %>
+<br><br /><%= f.label "Admin: Category ID" %>
+<%= f.text_field :category_id %><br />
+<% end %>
 
 <br><%= f.label :meta_description %><br>
 <%= f.text_field :meta_description %>
