--- a/app/views/welcome/_signup.html.erb
+++ b/app/views/welcome/_signup.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="exclusive-offer">
-      <h5 class="exclusive-title" id="exclusive-title--id">Sign up now to become a VIP subscriber & get exclusive offers</h5>
-      <p class="exclusive-title">(Limited time only!)</p>
+    <h5 class="exclusive-title" id="exclusive-title--id">Become a VIP subscriber of the Teen Magazine</h5>
   </div>
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <div class="signup">
@@ -9,7 +8,7 @@
     <div id="mc_embed_signup" class="home--signup">
     <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
         <div id="mc_embed_signup_scroll">
-      <h2>Become a VIP subscriber:</h2>
+      <h2>Subscribe to our magazine:</h2>
 
       <div id="mce-responses" class="clear">
         <div class="response" id="mce-error-response" style="display:none"></div>
@@ -23,7 +22,7 @@
        <div class="flex--email">
          <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-         <div class="clear"><input type="submit" value="Subscribe!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+         <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
        </div>
     </div>
         </div>
