--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,10 +12,9 @@
 <%= f.text_field :title %>
 
 <br>
-<br>
 
-<%= f.label :content, "Write your article here" %><br>
-<%= f.text_area :content %>
+<%= f.label :content, "Write your article here" %><br><br />
+<%= f.cktext_area :content %>
 
 <br><%= f.label :image, "Image URL" %><br>
 <%= f.text_field :image %>
