--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,10 @@
+<script>
+ CKEDITOR.addCss('img{width: 55% !important; height: auto !important;margin-left: auto !important;margin-right: auto !important;display: block;}');
+ CKEDITOR.addCss('iframe{margin: 0 auto !important;}');
+ CKEDITOR.addCss('html {margin-left: auto;margin-right: auto;}#twitter-widget-0, #twitter-widget-1 {margin: 0 auto !important;}a {color: #e0528d;}a:hover {opacity: 0.5;}@media (max-width: 600px) {img {width: 100% !important;}}');
+ </script>
+
+
 <%= form_for @post do |f| %>
   <% if @post.errors.any? %>
     <h2><%= pluralize(@post.errors.count, "error")%> prevented this post from saving:</h2>
