--- a/app/views/pages/topics.html.erb
+++ b/app/views/pages/topics.html.erb
@@ -16,6 +16,7 @@
     <p> Love & Relationships </p>
     <p> Entreprenuership </p>
     <p> Humor </p>
+    <p> News </p>
   </div>
 
   <h3 style="margin-bottom:10px;">Here are some ideas for titles:</h3>
@@ -29,12 +30,12 @@
     <li> <p class="blank">(type: hair, outfit, makeup)</p> trends you need to try</li>
     <li> 13 of the best products from <p class="blank">(brand)</p></li>
     <li> How To <p class="blank">(make money as a teen, pack for spring break, pick the perfect prom dress etc)</p></li>
-    <li> <p class="blank">(something ex. sleepover, valentine's day, date outfit)</p> must haves/essentials</li>
+    <li> <p class="blank">(holiday/event)</p> must haves/essentials</li>
     <li> <p class="blank">(something)</p> every girl needs to know</li>
     <li> <p class="blank">(something)</p> every <p class="blank">(adjective: ex. busy, on the go)</p> girl needs to know/have</li>
   </ol>
 
-  <p>Please change these titles as much as you want! There are here for inspiration. If you need more ideas about what type of things to write about, visit these websites:</p>
+  <p>Please change these titles as much as you want! They are here for inspiration. If you need more ideas about what type of things to write about, visit these websites:</p>
 
   <ol>
     <li><a target="_blank" href="https://www.society19.com/">Society19.com</a></li>
