--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -19,92 +19,73 @@
   <p>
     - <b>Introductory Paragraph:</b> The first few sentences are the most important for SEO (Search Engin Optimization) and therefore should be descriptive and include words that describe what the article is going to be about.
   </p>
-  <%= image_tag("1.png")%>
+  <img class="image" src="http://i.imgur.com/212OZEZ.png" />
   <p>
     - <b>Headers:</b> Your Article needs to be split up with descriptive headers. To make it easier to include headers, make your title something like: 7 steps to having healthy hair or 10 best places in the world to travel for your senior trip.
   </p>
   <p>
     - <b>Images:</b> You don't need to have an image for every point you make, but a good idea is to have an image for every other point that you make. At minimum, there should be at least one image in your article, preferably more. You cannot use just any picture you find on the web. To read about where you can find images, read <a href="/finding-images">Finding Images</a>.
   </p>
-  <%= image_tag("2.png")%>
+  <%= image_tag("2.png", :class=>"image")%>
   <p>
     - <b>Paragraphs:</b> Paragraphs should never be more than four lines, and should be split up wherever possible. A concluding paragraph is not necessary.
   </p>
-  <%= image_tag("3.png")%>
+  <%= image_tag("3.png", :class=>"image")%>
 
   <h1>Formatting Your Articles</h1>
-  <p>Copy and paste this into the top of your article:  </p>
+  <img src="http://i1074.photobucket.com/albums/w412/mjohansson9/colorcode_zpse3zifzvp.jpg" />
+  <ol>
+    <li><p style="color: #ff00aa; display: inline;">Source:</p> Changes the text to the source code (HTML and CSS). Use this button when embedding youtube videos or instagram/twitter widgets. See instructions for doing this.</li>
+    <li><p style="color: #00a9ff; display: inline;">Format:</p> This button for changing the size of headers. Use Heading 1 for the main topics in your article and the others for subheaders.</li>
+    <li><p style="color: #a940de; display: inline;">Links:</p> See instructions for adding links.</li>
+    <li><p style="color: #00d400; display: inline;">Images:</p> See instructions for adding images.</li>
+    <li><p style="color: #0055ff; display: inline;">Lists:</p> Use these buttons to add ordered and unordered lists.</li>
+  </ol>
 
-  <xmp>
-  <style scoped>
-    .image {
-          width: 70%;
-          margin-left: auto;
-          margin-right: auto;
-          display: block;
-      }
-    .link {
-     text-decoration: none;
-     color: #e0528d;
-    }
-    .link:hover {
-     opacity: 0.5;  
-    }
-    @media (max-width: 600px) {
-     .image {
-         width: 100%;
-     }
-    }
-  </style>
-  </xmp>
-  <p>  Example:  </p>
-  <%= image_tag("4.png")%>
-  <p>This is called CSS and is important for styling your article. It is not important to know exactly what it means, but if you're curious about it, you can search for CSS basics online.</p>
-
-  <h3>Text, Bold Font, Italic Font, & Headers</h3>
-  <ul>
-    <li><p>Regular text can be written as is.</p></li>
-    <li><p style="display: inline-block;">Bold text is wrapped in <xmp style="display:inline-block;"> <b></b></xmp> example: <xmp style="display: inline-block;"><b></xmp><p style="display: inline-block;">This will be bold</p><xmp style="display: inline-block;"></b></xmp></p></li>
-    <li><p style="display: inline-block;">Italic text is wrapped in <xmp style="display:inline-block;"> <i></i></xmp> example: <xmp style="display: inline-block;"><i></xmp><p style="display: inline-block;">This will be italic</p><xmp style="display: inline-block;"></i></xmp></p></li>
-    <li><p>#Big Header</p></li>
-    <li><p>##Medium Header</p></li>
-    <li><p>###Small Header</p></li>
-  </ul>
+  <h3>Links</h3>
+  <p style="margin-bottom: 10px;">To add a link, first highlight the text you want to add the link to, then click on the infinity symbol (purple box). Next, enter the link in the URL box.</p>
+  <img class="image" src="http://i.imgur.com/RtX7Zf1.png"/>
+  <p style="margin-top: 20px; margin-bottom:10px;">IMPORTANT: For all links, you must change the target setting to "New Window (_blank)".</p>
+  <img class="image" src="http://i.imgur.com/UGb2fG9.png"  />
 
   <div class="writing--images">
     <h3>Images</h3>
-    <p>Copy and paste this exact code into your article where you want your image:</p>
-    <xmp>
-    <img src="https://www.google.com/" class="image"/>
-    </xmp>
-    <p>Replace https://www.google.com/ with your link. Before using images, read about which images you're allowed to use <a href="/finding-images">here</a>.</p>
-    <p>IMPORTANT: Taking the url link from Pintrest or Instagram does not work. Instead, follow these directions:</p>
-    <h3>Pintrest</h3>
+    <p>
+      To add an image, click on the image symbol boxed in green. You may choose to either use a url or upload your own image. You can also add a link to your image under the Link tab. If you do, make sure you change the target to "New Window (_blank)". When uploading your own image, make sure to click "Send it to the Server" after choosing a file.
+    </p>
+    <p>IMPORTANT: Taking the url link directly from Pintrest or Instagram does not work. Instead, follow these directions:</p>
+    <h4>Pintrest:</h4>
     <p>Right click on the image, and select "copy image address"</p>
-    <%= image_tag("5.png")%>
+    <%= image_tag("5.png", :class=>"image")%>
     <p>Alternatively, you can search for the image on google by saving the image from pintrest onto your desktop, and then dragging it into google's image search. You can then use the direct link from google. For more information go <a href="https://support.google.com/websearch/answer/1325808?hl=en">here</a>.</p>
-    <h3>Instagram</h3>
-    <p>Select the image you want to use and click on the [...] in the bottom right corner.</p>
-    <%= image_tag("6.png")%>
+    <h4>Instagram:</h4>
+    <p>
+      First, click "Source" in your toolbar to change to HTML and CSS. It will look a little weird, but that's okay.
+    </p>
+    <p>Next, select the image you want to use and click on the [...] in the bottom right corner.</p>
+    <%= image_tag("6.png", :class=>"image")%>
     <p>Select embed and copy the code.</p>
-    <%= image_tag("7.png")%>
-    <%= image_tag("8.png")%>
-    <p>Paste this into your article.</p>
+    <%= image_tag("8.png", :class=>"image")%>
+    <p>Paste the copied code into your article (remember, "Source" needs to be activated before doing this).</p>
+    <img class="image" src="http://i.imgur.com/ruOcdsM.png" />
+    <p style="margin-top: 30px; background-color: yellow; display: inline-block; padding: 5px;">You can do the same thing with Twitter widgets and Youtube videos.</p>
+    <h4 style="margin-top: 10px;">Twitter:</h4>
+    <p>
+      For Twitter, click on a tweet to open it, and then click on the downwards arrow in the top right. Finally click on "Embed" to copy the code.
+    </p>
+    <img class="image" src="http://i.imgur.com/hMmXaPf.png" />
+    <h4>Youtube:</h4>
+    <p>
+      For Youtube, go to Share, then Embed.
+    </p>
+    <img class="image" src="http://i.imgur.com/kAlhUpl.png" />
 
-    <%= image_tag("9.png")%>
-    <%= image_tag("10.png")%>
   </div>
 
-  <h3>Links</h3>
-  <p>Copy and paste this exact code into your article where you want your link. Replace https://www.google.com/ with your link.</p>
-  <xmp>
-  <a href="https://www.google.com/" target="_blank" class="link">TEXT</a>
-  </xmp>
   <hr />
 
   <p>
-    If you're confused about any of this styling, you can take a look at this example <a target="_blank" href="https://docs.google.com/document/d/1dahvvmBCLPcZzbsHuwuOWnptJ1en10-68Jv5wQC0qOM/edit?usp=sharing">article</a>.
-    If you want to something specific with styling, it is most likely possible. Just email Mia at johansson.mia09@gmail.com with what you want to do, and she will explain how to do it.</a>.
+    If you're confused about any of this styling, or want to do something specific, you can email Mia at <b>johansson.mia09@gmail.com</b>
   </p>
 
   <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
