--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -54,6 +54,25 @@
       opacity: 0.5;
     }
   }
+
+  @media (max-width: 700px) {
+    .categories {
+      p {
+        width: 50%;
+      }
+    }
+  }
+  @media (max-width: 440px) {
+    h3 {
+      margin-bottom: 15px;
+    }
+    .categories {
+      p {
+        width: 100%;
+        margin-left: 23px;
+      }
+    }
+  }
 }
 
 
@@ -61,6 +80,7 @@
   .yellow {
     background-color: yellow;
     color: black;
+    padding: 5px;
   }
   b {
     color: $highlight;
@@ -75,6 +95,11 @@
     xmp {
       margin: 0;
     }
+  }
+  .image {
+    width: 90%;
+    margin: 0 auto;
+    display: block;
   }
   .writing--images {
     p {
