--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -55,7 +55,7 @@
   <p>  That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/applies/new">www.theteenmagazine.com/applies/new</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
 
   <p class="question">How can I become an editor?</p>
-  <p>  Editor status is only available for writers who have at least 15 published articles. Once you have 15 published articles, you can email Mia at johansson.mia09@gmail.com with an inquiry.</p>
+  <p>  Editor status is only available for writers who have at least 15 published articles, but you can email Mia at johansson.mia09@gmail.com with an inquiry.</p>
 
   <p class="question">How can I change my password? </p>
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
