--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,11 @@
             <% if @posts_featured %>
               <div class="featured individual">
                 <div class="featured_img">
+                  <% if (@posts_featured.image != "" && @posts_featured.image != nil) %>
                   <%=link_to(image_tag(@posts_featured.image, :id => "image_thumbnail"), @posts_featured )%>
+                  <% else %>
+                  <%=link_to(image_tag(@posts_featured.thumbnail.url, :id => "image_thumbnail"), @posts_featured )%>
+                  <% end %>
                 </div>
                 <h3 class="article_title"><a href="#"><%= link_to @posts_featured.title, @posts_featured %></a></h3>
                 <p class="date"><%= @posts_featured.created_at.strftime("%A, %b %d")%></p>
@@ -17,7 +21,11 @@
           <div class="articles2-6">
               <% @posts_approved[1..4].each do |post| %>
                 <div class="thumbnail">
+                  <% if (post.image != "" && post.image != nil) %>
                   <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
+                  <% else %>
+                  <%=link_to(image_tag(post.thumbnail.url(:medium), :class => "image_thumbnail"), post )%>
+                  <% end %>
                   <div class="thumbnail--container">
                     <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
                     <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
@@ -41,7 +49,11 @@
   <div class="container--category">
     <% @posts_approved_fashion[0..0].each do |post| %>
       <div class="thumbnail newest">
+        <% if (post.image != "" && post.image != nil) %>
         <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
+        <% else %>
+        <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+        <% end %>
         <div class="container">
           <h3 class="article_title"><%= link_to post.title, post %></h3>
           <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
@@ -52,8 +64,11 @@
       <div class="col-2 homepage_content">
         <% @posts_approved_fashion[1..7].each do |post| %>
           <div class="thumbnail older">
+            <% if (post.image != "" && post.image != nil) %>
             <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+            <% else %>
+            <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+            <% end %>            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
             <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
           </div>
         <% end %>
@@ -64,7 +79,11 @@
         <div class="articles2-6">
             <% @posts_approved_fashion[1..4].each do |post| %>
               <div class="thumbnail">
+                <% if (post.image != "" && post.image != nil) %>
                 <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
+                <% else %>
+                <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+                <% end %>
                 <div class="thumbnail--container">
                   <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
                   <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
@@ -74,16 +93,19 @@
         </div>
       </div>
     </div>
-    <% end %>
   </div>
+    <% end %>
 
   <% if @posts_approved_beauty %>
   <h1 class="section--title"><%= link_to @category_beauty.name, @category_beauty %></h1>
   <div class="container--category">
     <% @posts_approved_beauty[0..0].each do |post| %>
       <div class="thumbnail newest">
+        <% if (post.image != "" && post.image != nil) %>
         <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-        <div class="container">
+        <% else %>
+        <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+        <% end %>        <div class="container">
           <h3 class="article_title"><%= link_to post.title, post %></h3>
           <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
         </div>
@@ -93,8 +115,11 @@
       <div class="col-2 homepage_content">
         <% @posts_approved_beauty[1..7].each do |post| %>
           <div class="thumbnail older">
+            <% if (post.image != "" && post.image != nil) %>
             <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+            <% else %>
+            <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+            <% end %>            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
             <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
           </div>
         <% end %>
@@ -105,8 +130,11 @@
         <div class="articles2-6">
             <% @posts_approved_beauty[1..4].each do |post| %>
               <div class="thumbnail">
+                <% if (post.image != "" && post.image != nil) %>
                 <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-                <div class="thumbnail--container">
+                <% else %>
+                <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+                <% end %>                <div class="thumbnail--container">
                   <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
                   <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
                 </div>
@@ -123,8 +151,11 @@
   <div class="container--category">
     <% @posts_approved_entertainment[0..0].each do |post| %>
       <div class="thumbnail newest">
+        <% if (post.image != "" && post.image != nil) %>
         <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-        <div class="container">
+        <% else %>
+        <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+        <% end %>        <div class="container">
           <h3 class="article_title"><%= link_to post.title, post %></h3>
           <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
         </div>
@@ -134,8 +165,11 @@
       <div class="col-2 homepage_content">
         <% @posts_approved_entertainment[1..7].each do |post| %>
           <div class="thumbnail older">
+            <% if (post.image != "" && post.image != nil) %>
             <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+            <% else %>
+            <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+            <% end %>            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
             <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
           </div>
         <% end %>
@@ -146,8 +180,11 @@
         <div class="articles2-6">
             <% @posts_approved_entertainment[1..4].each do |post| %>
               <div class="thumbnail">
+                <% if (post.image != "" && post.image != nil) %>
                 <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-                <div class="thumbnail--container">
+                <% else %>
+                <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+                <% end %>                <div class="thumbnail--container">
                   <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
                   <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
                 </div>
@@ -166,8 +203,11 @@
         <% @posts_approved_others.each do |post| %>
           <div class="thumbnail">
             <div class="container--image">
+              <% if (post.image != "" && post.image != nil) %>
               <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-            </div>
+              <% else %>
+              <%=link_to(image_tag(post.thumbnail.url, :class => "image_thumbnail"), post )%>
+              <% end %>            </div>
             <div class="thumbnail--container">
               <p class="date"><%= post.meta_title%></p>
               <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
