--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -1,8 +1,92 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
+.margin {
+  margin-right: 40px;
+}
+
+.articles {
+  .title {
+    color: $highlight;
+    margin-bottom:  10px;
+    padding-bottom: 10px;
+    border-bottom: 1px dotted $light;
+    text-shadow: 0.5px 0.5px #191919;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+  .flex_other_articles {
+    display: flex;
+    flex-direction: column;
+    .one_article {
+      display: flex;
+      flex-direction: row;
+      margin-top: 10px;
+      img {
+        width: 130px;
+        height: 80px;
+        background-size: cover;
+      }
+      p {
+        font-size: 1em;
+        margin: 0;
+        margin-left: 10px;
+        line-height: 18px;
+        font-family: 'Roboto Condensed', sans-serif;
+        a {
+          text-decoration: none;
+          color: black;
+        }
+      }
+    }
+  }
+}
+
+.post_apply {
+  min-width: 250px;
+  max-width: 250px;
+  margin-right: 40px;
+  height: 333.33px;
+  position: relative;
+  z-index: 0;
+  margin-top: -60px;
+
+  img {
+    width: 100%;
+  }
+}
+
+#apply_image {
+  min-width: 250px;
+  max-width: 250px;
+  margin-right: 40px;
+  margin-top: 10px;
+}
+
+.flex_wrapper_posts {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  max-width: 90rem;
+}
 
 .posts_hr {
   margin: auto;
   margin-top: 20px;
+}
+
+.skinny {
+  margin-left: 40px;
+  margin-right: 40px;
+  flex-grow: 1;
+}
+
+.flex--p {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.skinny_wrapper {
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #posts_wrapper {
@@ -33,36 +117,32 @@
   margin-top: -10px;
 }
 
-.flex--container--post--title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 300px;
-  margin-top: -10px;
+#post_title_show {
   z-index: 100;
+  background-color: white;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -100px;
+  margin-bottom: 30px;
+  display: block;
   position: relative;
+  z-index: 0;
+  padding: 1px 80px;
 
-  header {
-    text-align: center;
-    background-color: white;
-    width: 80%;
-    max-width: 400px;
-    max-height: 280px;
-    margin-left: auto;
-    margin-right: auto;
-
-    .date {
-      font-size: 1.2em;
-      color: #00b5f9;
-      padding-bottom: 10px;
-      font-family: 'Roboto Condensed', sans-serif;
-    }
-    h1 {
-      margin-bottom: 0;
-      padding: 10px;
-      color: #2b2b2b;
-      font-family: 'Roboto Condensed', sans-serif;
-    }
+  .date {
+    font-size: 1.2em;
+    color: $light;
+    margin-bottom: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+  h1 {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: $highlight;
+    text-shadow: 1px 1px #191919;
+    font-size: 60px;
+    font-family: 'Roboto Condensed', sans-serif;
   }
 }
 
@@ -73,6 +153,7 @@
 }
 
 #content {
+  padding: 0 80px;
    .post_content {
      img {
        width: 55% !important;
