--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -149,6 +149,8 @@
 #background {
   background-color:#d3d3d3;
   padding: 10px;
+  max-width: 800px;
+  margin: 0 auto;
   background-image: linear-gradient(
       to right top,
       transparent 33%,
@@ -161,7 +163,7 @@
 }
 
 .flex--profile {
-  padding: 20px;
+  padding: 30px;
   background-color: white;
   display: flex;
   flex-direction: row;
@@ -240,7 +242,7 @@
   }
 
 
-  #post_title {
+  #post-title {
     margin: 0;
     a {
       font-size: 20px;
