--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -111,9 +111,9 @@
     <div class="articles">
       <div class="flex_other_articles">
       <% if @user_posts_approved.count > 1 %>
-      <h3 class="title">Other Articles by <%= @post.user.first_name %> <%= @post.user.last_name %></h3>
+      <h3 class="title">More by <%= @post.user.first_name %> <%= @post.user.last_name %></h3>
       <% @user_posts_approved[1..5].each do |post| %>
-        <% if post.title != @post.title %>
+        <% if post.id != @post.id %>
           <div class="one_article">
               <% if post.image != "" && post.image != nil %>
                <%= link_to(image_tag(post.image), post) %>
@@ -128,7 +128,7 @@
       <% @num = 1 %>
       <h3 class="title">More in <%= @post.meta_title %></h3>
         <% @posts.each do |post| %>
-          <% if (post.meta_title == @post.meta_title) && (post.title != @post.title) && (@num <= 4) %>
+          <% if (post.meta_title == @post.meta_title) && (post.id != @post.id) && (@num <= 4) %>
           <div class="one_article">
             <% if post.image != "" && post.image != nil %>
              <%= link_to(image_tag(post.image), post) %>
